# src/models/user.model.ts
@@ -1,5 +1,8 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
+import { sendMail, renderMainHtml } from "../utils/mail/mail"
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
+
 
 export interface User {
     fullName: string;
@@ -10,6 +13,7 @@ export interface User {
     profilePicture: string;
     isActive: boolean;
     activationCode: string;
+    createdAt?: string;
 }
 
 const Schema = mongoose.Schema;
@@ -20,10 +24,12 @@ const userSchema = new Schema<User>({
     },
     username: {
         type: Schema.Types.String,
+        unique: true,
         required: true
     },
     email: {
         type: Schema.Types.String,
+        unique: true,
         required: true
     },
     password: {
@@ -55,8 +61,39 @@ userSchema.pre("save", function (next) {
     // jadi this itu akan mengambil semua data dari user / struktur data dari user
     const user = this;
     user.password = encrypt(user.password);
+    user.activationCode = encrypt(user.id);
     next();
 })
+
+// ini untuk mengirimkan email activation / email verify
+userSchema.post('save', async function (doc, next) {
+    try {
+        const user = doc;
+        console.log("send email to ", user);
+        const contentMail = await renderMainHtml('registrationSuccess.ejs', {
+            fullName: user.fullName,
+            username: user.username,
+            email: user.email,
+            createdAt: user.createdAt,
+            activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`
+        })
+
+
+
+        await sendMail({
+            from: EMAIL_SMTP_USER,
+            to: user.email,
+            subject: "Aktivasi Akun Anda di web Acara",
+            html: contentMail,
+        });
+        next();
+    } catch (error) {
+        console.log(error);
+    } finally {
+        next();
+    }
+})
+
 
 userSchema.methods.toJSON = function () {
     const user = this;
